Closed
Bug 239435
Opened 21 years ago
Closed 21 years ago
VCS file from EBay crashes Calendar
Categories
(Calendar :: General, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: barruda, Assigned: mostafah)
References
Details
(Keywords: crash)
Attachments
(1 file)
|
481 bytes,
text/x-vcalendar
|
Details |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.6) Gecko/20040206 Firefox/0.8
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.6) Gecko/20040206 Firefox/0.8
When i use the "Add to calendar" function on any product in ebay i receive a VCS
calendar file like this:
BEGIN:VCALENDAR
BEGIN:VEVENT
SUMMARY;CHARSET=ISO-8859-1;ENCODING=quoted-printable:eBay-Erinnerung: CD
Wechsler Phillips
DESCRIPTION;CHARSET=ISO-8859-1;ENCODING=quoted-printable:Das eBay-Angebot mit
der Nummer 2470749042 endet planmaessig in Kuerze! Klicken Sie bitte hier, um
die Seite aufzurufen:
http://cgi.ebay.de/ws/eBayISAPI.dll?ViewItem&item=3D2470749042&sspagename=3Dcalrem
DTSTART:20040404T051342Z
DTEND:20040404T071342Z
END:VEVENT
END:VCALENDAR
If i try to import this file via menue or CTRL-I (no matter what choice for
handling of duplicates) the calendar and the browser crashes without an error
message.
Reproducible: Always
Steps to Reproduce:
1.in calendar tool press CTRL-I
2.press OK-button
3.select vCalendar Files as type
4.select downloaded file
5.press OPEN-button (im using a german XP so the actual text is ÖFFNEN)
Actual Results:
Browser an calendar tool crashes
Expected Results:
Import the VCS file corectly
Comment 1•21 years ago
|
||
Confirming. The crash results from those
";CHARSET=ISO-8859-1;ENCODING=quoted-printable" -parts. Removing them makes the
import not crash. There is another issue with comma escaping but that's not a
crasher.
These are both vcal 1.0 compatibility/import issues. Do we have a bug on that
yet? There is related info in bug 122649 comment 16.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Summary: Import of VCS file from ebay fails, browser crashes without any error message → Import of VCS file from ebay fails, browser crashes without any error message
Updated•21 years ago
|
Severity: normal → major
OS: Windows XP → All
Comment 2•21 years ago
|
||
I saw this with Thunderbird version 0.7.3 (20040803) using Calendar extension
2004080916-cal. (I would cut/paste the whole version string but the About box
doesn't allow text selection.)
I'm unclear why this wasn't prioritized correctly; it causes a calendar crash
and should be dealt with posthaste.
If we fix the crash so that Calendar throws an error, then we should pursue VCS
import capability in bug122649.
Is this by any chance a topcrash? I have a Talkback trace for my Thunderbird
crash caught, but for some reason it isn't uploading correctly. This is trivial
to reproduce, so Talkback isn't necessary.
Severity: major → critical
Keywords: crash
Comment 3•21 years ago
|
||
repro:
1. Tools->Import From File
2. Select eBayItem.vcs
3. Crash
Updated•21 years ago
|
Summary: Import of VCS file from ebay fails, browser crashes without any error message → VCS file from EBay crashes Calendar
Comment 4•21 years ago
|
||
The crash in somewhere inside libical. We might want to update the lib, to see
if that helps.
| Assignee | ||
Comment 5•21 years ago
|
||
To be more specific,
icalproperty_get_summary crashes when called at:
http://lxr.mozilla.org/mozilla/source/calendar/libxpical/oeICalEventImpl.cpp#1853
| Assignee | ||
Comment 6•21 years ago
|
||
libical seems to be choking on the CHARSET parameter. If that parameter is
removed from the vcs file, the event will show up properly.
Nevertheless, crashing is bad and with our libical code, icalvalue_get_text in
icalderivedvalue.c is not doing a good argument checking. icalerror_check_arg
should've been icalerror_check_arg_rz. That part is generated by the perl scripts.
I'll look to see if libical.cvs has fixed this if not I'll provide a patch.
| Assignee | ||
Comment 7•21 years ago
|
||
The fix for better argument checking was suggested to libical and got checked in:
http://www.busboom.org/pipermail/libical/2004-September/000060.html
This is the same fix to our tree:
http://bonsai.mozilla.org/cvsquery.cgi?treeid=default&module=all&branch=HEAD&branchtype=match&dir=mozilla%2Fother-licenses%2Flibical&file=&filetype=match&who=&whotype=match&sortby=Date&hours=2&date=explicit&mindate=2004-09-15+11%3A54&maxdate=2004-09-15+11%3A54&cvsroot=%2Fcvsroot
| Assignee | ||
Comment 8•21 years ago
|
||
Now checking for the return value from the related libical functions fixes the
crash:
http://bonsai.mozilla.org/cvsquery.cgi?treeid=default&module=all&branch=HEAD&branchtype=match&dir=mozilla%2Fcalendar%2Flibxpical&file=&filetype=match&who=&whotype=match&sortby=Date&hours=2&date=explicit&mindate=2004-09-15+12%3A28&maxdate=2004-09-15+12%3A28&cvsroot=%2Fcvsroot
But now the title and description is null. Should we file a new bug on this or
change the summary?
| Assignee | ||
Comment 9•21 years ago
|
||
From rfc2445:
4.1.4 Character Set
There is not a property parameter to declare the character set used
in a property value. The default character set for an iCalendar
object is UTF-8 as defined in [RFC 2279].
So libical can't decode that parameter but can it be ignored?
| Assignee | ||
Comment 10•21 years ago
|
||
> So libical can't decode that parameter but can it be ignored?
Yes it can and here's the code that ignores the unsupported parameter ( i.e.
CHARSET ) :
http://bonsai.mozilla.org/cvsquery.cgi?treeid=default&module=all&branch=HEAD&branchtype=match&dir=mozilla%2Fother-licenses%2Flibical&file=&filetype=match&who=&whotype=match&sortby=Date&hours=2&date=explicit&mindate=2004-09-15+13%3A30&maxdate=2004-09-15+13%3A30&cvsroot=%2Fcvsroot
Note that ICAL_ERRORS_ARE_FATAL has been undefined so that the app doesn't abort
on ical errors.
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
| Assignee | ||
Comment 11•21 years ago
|
||
*** Bug 261211 has been marked as a duplicate of this bug. ***
Comment 12•19 years ago
|
||
The bugspam monkeys have been set free and are feeding on Calendar :: General. Be afraid for your sanity!
QA Contact: gurganbl → general
You need to log in
before you can comment on or make changes to this bug.
Description
•