Added checking for return value on summary and description. Fixes the crash for bug 239435: VCS file from EBay crashes Calendar